# Alist-Media-Rename

./: .gitignore  CHANGELOG.MD  README.md  amr.py  api.py  config.py  log.py  main.py  media_name.py  models.py  pyproject.toml  readme.md  requirements.txt  utils.py
.github/workflows/: python-app.yml  python-publish.yml
src/: amr.py  api.py  config.py  main.py  media_name.py  models.py  utils.py
src/AlistMediaRename/: __init__.py  amr.py  api.py  api_copy.py  cli.py  config.py  default.yaml  log.py  logger_setup.py  models.py  output.py  output_copy.py  readme.md  task.py  utils.py
test/: debug.py  file.py  file_gen.py  test.yaml  test_amr.py  test_config.py  test_multi_season.py  test_rename_interval.py  tmp.py  utils.py
