[project]
name = "AlistMediaRename"
version = "2.5.1"
description = "从 The Movie Database(TMDb) 获取剧集/电影信息，并对 Alist 指定媒体文件重命名，便于播放器刮削识别剧集/电影。测试Kodi, Nplayer, Infuse均可正确识别媒体信息。"
authors = [
    { name = "Hardy", email = "oharcy@outlook.com" }
]
dependencies = [
    "colorama>=0.4.6",
    "natsort>=8.4.0",
    "pyotp>=2.9.0",
    "requests>=2.31.0",
    "pydantic>=2.8.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/AlistMediaRename"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
