[project]
name = "AlistMediaRename"
version = "3.2.1"
description = "从 The Movie Database(TMDb) 获取剧集/电影信息，并对 Alist 指定媒体文件重命名，便于播放器刮削识别剧集/电影。测试Kodi, Nplayer, Infuse均可正确识别媒体信息。"
authors = [{ name = "Hardy", email = "oharcy@outlook.com" }]
dependencies = [
    "natsort>=8.4.0",
    "pyotp>=2.9.0",
    "pydantic>=2.8.2",
    "ruamel-yaml>=0.18.6",
    "click>=8.1.7",
    "rich>=13.9.4",
    "httpx>=0.28.1",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/jkoor/Alist-Media-Rename"

[project.scripts]
amr = "AlistMediaRename.cli:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/AlistMediaRename"]

[tool.uv]
dev-dependencies = ["pytest>=8.3.3"]
